Tweak URL for demo

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # baseurl is the website's URL without the hostname
 
 # If you are building a simple GitHub user page (http://username.github.io) then use these settings:
-url: "http://sysrich.github.io"
+url: "http://sysrich.github.io/new-software.o.o"
 baseurl: "/new-software.o.o"
 
 # If you are building a GitHub project page then use these settings:
