--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ description: Get the version you need. Download openSUSE Tumbleweed. Download op
 navbar-links:
   Tumbleweed: "tumbleweed"
   Leap: "leap"
-  In-Development: "leap-next"
+  Testing: "testing"
   Package Search: "https://software.opensuse.org/search"
 
 # Image to show in the navigation bar - image must be a square (width = height)
