--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ footer-links-active:
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "download.opensuse.org"  # eg. "deanattali.com/beautiful-jekyll"
+url-pretty: "software.opensuse.org"  # eg. "deanattali.com/beautiful-jekyll"
 
 # --- Misc --- #
 
